--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "       [0.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -380,12 +380,12 @@
     }
    ],
    "source": [
-    "print(rep.interval_rank(interval1))"
+    "print(rep.int_rank(interval1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -398,12 +398,12 @@
    ],
    "source": [
     "interval2 = Interval([(1,1)], [(2,1)])\n",
-    "print(rep.interval_rank(interval2))"
+    "print(rep.int_rank(interval2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -416,12 +416,12 @@
    ],
    "source": [
     "interval3 = Interval([(1,1)], [(2,1),(1,2)])\n",
-    "print(rep.interval_rank(interval3))"
+    "print(rep.int_rank(interval3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,126 @@
    ],
    "source": [
     "interval4 = Interval([(1,1), (0,2)], [(1,2)])\n",
-    "print(rep.interval_rank(interval4))"
+    "print(rep.int_rank(interval4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's compute some interval replacements. The computation uses the formula with the cover of intervals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interval5 = Interval([(0,1), (2,0)], [(0,2), (2,1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep.int_rank(interval5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(0, 1), (2, 1), (1, 1), (2, 0), (0, 2), (1, 0)],\n",
+       " [(0, 1), (2, 1), (1, 1), (2, 0), (0, 2), (1, 2)]]"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep.cover(interval5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rep.int_replacement(interval5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval6 = Interval([(1,1)], [(2,2)])\n",
+    "rep.int_replacement(interval6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "interval7 = Interval([(0,2)], [(2,2)])\n",
+    "rep.int_replacement(interval7)"
    ]
   },
   {
@@ -446,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -471,62 +590,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
     }
    ],
    "source": [
-    "rep2.interval_rank(Interval([(0,)],[(1,)]))"
+    "print(rep2.int_rank(Interval([(0,)],[(1,)])))\n",
+    "print(rep2.int_rank(Interval([(1,)],[(2,)])))\n",
+    "print(rep2.int_rank(Interval([(2,)],[(3,)])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
     }
    ],
    "source": [
-    "rep2.interval_rank(Interval([(1,)],[(2,)]))"
+    "print(rep2.int_replacement(Interval([(0,)],[(0,)])))\n",
+    "print(rep2.int_replacement(Interval([(1,)],[(3,)])))\n",
+    "print(rep2.int_replacement(Interval([(2,)],[(3,)])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n",
+      "0\n"
+     ]
     }
    ],
    "source": [
-    "rep2.interval_rank(Interval([(2,)],[(3,)]))"
+    "print(rep2.int_replacement(Interval([(0,)],[(2,)])))\n",
+    "print(rep2.int_replacement(Interval([(0,)],[(3,)])))\n",
+    "print(rep2.int_replacement(Interval([(1,)],[(1,)])))\n",
+    "print(rep2.int_replacement(Interval([(1,)],[(2,)])))\n",
+    "print(rep2.int_replacement(Interval([(2,)],[(2,)])))\n",
+    "print(rep2.int_replacement(Interval([(3,)],[(3,)])))"
    ]
   }
  ],
