clean example file

--- a/example.ipynb
+++ b/example.ipynb
@@ -15,6 +15,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Example in 2D"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let us consider a 3x3 2D grid:"
    ]
   },
@@ -301,6 +308,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Intervals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can define intervals by providing a list of sources and a list of sinks."
    ]
   },
@@ -311,6 +325,13 @@
    "outputs": [],
    "source": [
     "interval1 = Interval([(2,0),(1,1),(0,2)], [(2,2)]) # interval with 3 sources: (2,0),(1,1),(0,2) and 1 sink: (2,2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interval ranks"
    ]
   },
   {
@@ -441,6 +462,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Interval replacements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's compute some interval replacements. The computation uses the formula with the cover of intervals."
    ]
   },
@@ -451,47 +479,6 @@
    "outputs": [],
    "source": [
     "interval5 = Interval([(0,1), (2,0)], [(0,2), (2,1)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rep.int_rank(interval5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[(0, 1), (2, 1), (1, 1), (2, 0), (0, 2), (1, 0)],\n",
-       " [(0, 1), (2, 1), (1, 1), (2, 0), (0, 2), (1, 2)]]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rep.cover(interval5)"
    ]
   },
   {
@@ -512,6 +499,16 @@
    ],
    "source": [
     "rep.int_replacement(interval5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(rep.int_rank(interval5)) # check interval rank\n",
+    "print(rep.cover(interval5)) # check cover of the interval"
    ]
   },
   {
@@ -560,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example in one dimension."
+    "# Example in one dimension."
    ]
   },
   {
