clean example file - added length intervals

--- a/example.ipynb
+++ b/example.ipynb
@@ -594,6 +594,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(intervals))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -602,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -635,20 +652,18 @@
      "output_type": "stream",
      "text": [
       "0\n",
-      "1\n",
       "2\n"
      ]
     }
    ],
    "source": [
     "print(rep2.int_rank(Interval([(0,)],[(1,)])))\n",
-    "print(rep2.int_rank(Interval([(1,)],[(2,)])))\n",
     "print(rep2.int_rank(Interval([(2,)],[(3,)])))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
