adjust image size

--- a/example.ipynb
+++ b/example.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import numpy as np\n",
     "from basics import Representation, Interval\n",
-    "from IPython import display"
+    "from IPython.display import Image, display"
    ]
   },
   {
@@ -37,13 +37,16 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "metadata": {
+      "image/png": {
+       "width": 400
+      }
+     },
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "display.Image(\"data/quiver.png\")"
+    "display(Image(\"data/quiver.png\", width=400))"
    ]
   },
   {
@@ -65,13 +68,16 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "metadata": {
+      "image/png": {
+       "width": 400
+      }
+     },
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "display.Image(\"data/representation.png\")"
+    "display(Image(\"data/representation.png\", width=400))"
    ]
   },
   {
