--- a/example.ipynb
+++ b/example.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from basics import Representation, Interval\n",
+    "from utils import Representation, Interval\n",
     "from IPython.display import Image, display"
    ]
   },
