--- a/example.ipynb
+++ b/example.ipynb
@@ -46,7 +46,7 @@
     }
    ],
    "source": [
-    "display(Image(\"data/quiver.png\", width=400))"
+    "display(Image(\"img/quiver.png\", width=400))"
    ]
   },
   {
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "display(Image(\"data/representation.png\", width=400))"
+    "display(Image(\"img/representation.png\", width=400))"
    ]
   },
   {
