add display_interval, simplify example, change notes in utils

--- a/example.ipynb
+++ b/example.ipynb
@@ -411,60 +411,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "interval2 = Interval([(1,1)], [(2,1)])\n",
-    "print(rep.int_rank(interval2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "interval3 = Interval([(1,1)], [(2,1),(1,2)])\n",
-    "print(rep.int_rank(interval3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
-   "source": [
-    "interval4 = Interval([(1,1), (0,2)], [(1,2)])\n",
-    "print(rep.int_rank(interval4))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -480,16 +426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "interval5 = Interval([(0,1), (2,0)], [(0,2), (2,1)])"
+    "interval2 = Interval([(0,1), (2,0)], [(0,2), (2,1)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -498,18 +444,18 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rep.int_replacement(interval5)"
+    "rep.int_replacement(interval2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -522,50 +468,8 @@
     }
    ],
    "source": [
-    "print(rep.int_rank(interval5)) # check interval rank\n",
-    "print(rep.cover(interval5)) # check cover of the interval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interval6 = Interval([(1,1)], [(2,2)])\n",
-    "rep.int_replacement(interval6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "interval7 = Interval([(0,2)], [(2,2)])\n",
-    "rep.int_replacement(interval7)"
+    "print(rep.int_rank(interval2)) # check interval rank\n",
+    "print(rep.cover(interval2)) # check cover of the interval"
    ]
   },
   {
@@ -577,17 +481,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interval with sources [(1, 0)] and sinks [(1, 0)]: 2\n",
-      "Interval with sources [(0, 2)] and sinks [(2, 2)]: 1\n",
-      "Interval with sources [(0, 1), (2, 0)] and sinks [(2, 1)]: 1\n",
-      "Interval with sources [(1, 1), (2, 0)] and sinks [(2, 2)]: 1\n"
+      "Interval with sources [(1, 0)] and sinks [(1, 0)]\n",
+      ".          .          .\n",
+      "                                 \n",
+      "                                 \n",
+      "                                 \n",
+      "X          .          .\n",
+      "                                 \n",
+      "                                 \n",
+      "                                 \n",
+      ".          .          .\n",
+      "Interval replacement: 2\n",
+      "Interval with sources [(0, 2)] and sinks [(2, 2)]\n",
+      ".          .          X\n",
+      "                      |          \n",
+      "                      |          \n",
+      "                      v          \n",
+      ".          .          X\n",
+      "                      |          \n",
+      "                      |          \n",
+      "                      v          \n",
+      ".          .          X\n",
+      "Interval replacement: 1\n",
+      "Interval with sources [(0, 1), (2, 0)] and sinks [(2, 1)]\n",
+      ".          X          .\n",
+      "           |                     \n",
+      "           |                     \n",
+      "           v                     \n",
+      ".          X          .\n",
+      "           |                     \n",
+      "           |                     \n",
+      "           v                     \n",
+      "X -------> X          .\n",
+      "Interval replacement: 1\n",
+      "Interval with sources [(1, 1), (2, 0)] and sinks [(2, 2)]\n",
+      ".          .          .\n",
+      "                                 \n",
+      "                                 \n",
+      "                                 \n",
+      ".          X -------> X\n",
+      "           |          |          \n",
+      "           |          |          \n",
+      "           v          v          \n",
+      "X -------> X -------> X\n",
+      "Interval replacement: 1\n"
      ]
     }
    ],
@@ -596,12 +540,14 @@
     "for itv in intervals:\n",
     "    repl = rep.int_replacement(itv)\n",
     "    if repl != 0 :\n",
-    "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}: {rep.int_replacement(itv)}\")"
+    "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}\")\n",
+    "        rep.display_interval(itv)\n",
+    "        print(f\"Interval replacement: {rep.int_replacement(itv)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -620,12 +566,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example in one dimension."
+    "# Example in 1D"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -669,16 +615,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interval with sources [(0,)] and sinks [(0,)]: 1\n",
-      "Interval with sources [(2,)] and sinks [(3,)]: 1\n",
-      "Interval with sources [(1,)] and sinks [(3,)]: 1\n"
+      "Interval with sources [(0,)] and sinks [(0,)]\n",
+      "X          .          .          .\n",
+      "Interval replacement: 1\n",
+      "Interval with sources [(2,)] and sinks [(3,)]\n",
+      ".          .          X -------> X\n",
+      "Interval replacement: 1\n",
+      "Interval with sources [(1,)] and sinks [(3,)]\n",
+      ".          X -------> X -------> X\n",
+      "Interval replacement: 1\n"
      ]
     }
    ],
@@ -687,7 +639,10 @@
     "for itv in intervals:\n",
     "    repl = rep2.int_replacement(itv)\n",
     "    if repl != 0 :\n",
-    "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}: {rep2.int_replacement(itv)}\")"
+    "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}\")\n",
+    "        rep\n",
+    "        rep2.display_interval(itv)\n",
+    "        print(f\"Interval replacement: {rep2.int_replacement(itv)}\")"
    ]
   }
  ],
