--- a/example.ipynb
+++ b/example.ipynb
@@ -499,6 +499,7 @@
       "                                 \n",
       ".          .          .\n",
       "Interval replacement: 2\n",
+      "\n",
       "Interval with sources [(0, 2)] and sinks [(2, 2)]\n",
       ".          .          X\n",
       "                      |          \n",
@@ -510,6 +511,7 @@
       "                      v          \n",
       ".          .          X\n",
       "Interval replacement: 1\n",
+      "\n",
       "Interval with sources [(0, 1), (2, 0)] and sinks [(2, 1)]\n",
       ".          X          .\n",
       "           |                     \n",
@@ -521,6 +523,7 @@
       "           v                     \n",
       "X -------> X          .\n",
       "Interval replacement: 1\n",
+      "\n",
       "Interval with sources [(1, 1), (2, 0)] and sinks [(2, 2)]\n",
       ".          .          .\n",
       "                                 \n",
@@ -531,7 +534,8 @@
       "           |          |          \n",
       "           v          v          \n",
       "X -------> X -------> X\n",
-      "Interval replacement: 1\n"
+      "Interval replacement: 1\n",
+      "\n"
      ]
     }
    ],
@@ -542,7 +546,8 @@
     "    if repl != 0 :\n",
     "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}\")\n",
     "        rep.display_interval(itv)\n",
-    "        print(f\"Interval replacement: {rep.int_replacement(itv)}\")"
+    "        print(f\"Interval replacement: {rep.int_replacement(itv)}\")\n",
+    "        print()"
    ]
   },
   {
@@ -625,12 +630,15 @@
       "Interval with sources [(0,)] and sinks [(0,)]\n",
       "X          .          .          .\n",
       "Interval replacement: 1\n",
+      "\n",
       "Interval with sources [(2,)] and sinks [(3,)]\n",
       ".          .          X -------> X\n",
       "Interval replacement: 1\n",
+      "\n",
       "Interval with sources [(1,)] and sinks [(3,)]\n",
       ".          X -------> X -------> X\n",
-      "Interval replacement: 1\n"
+      "Interval replacement: 1\n",
+      "\n"
      ]
     }
    ],
@@ -641,7 +649,8 @@
     "    if repl != 0 :\n",
     "        print(f\"Interval with sources {itv.src} and sinks {itv.snk}\")\n",
     "        rep2.display_interval(itv)\n",
-    "        print(f\"Interval replacement: {rep2.int_replacement(itv)}\")"
+    "        print(f\"Interval replacement: {rep2.int_replacement(itv)}\")\n",
+    "        print()"
    ]
   }
  ],
