--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -456,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can access the list of all the intervals with **list_int**. Note that in the future it might be good to precompute these intervals for commonly used grids such as commutative ladders."
+    "You can access the list of all intervals with **list_int**. Note that in the future it might be good to precompute these intervals for commonly used grids such as commutative ladders."
    ]
   },
   {
@@ -536,7 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given an interval $I$, we can compute the associated matrices $\\bf{M}$ and $\\bf{N}$, which are used to compute the $I$-rank of *rep*. "
+    "Given an interval $I$, we can compute the associated matrices $\\bf{M}$ and $\\bf{N}$, which are used to compute the $I$-rank of $L$. "
    ]
   },
   {
@@ -583,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can directly compute the $I$-rank of *rep* as follows."
+    "We can directly compute the $I$-rank of $L$ as follows."
    ]
   },
   {
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, given a compression system $\\xi$, the interval replacement of the representation $L$ is characterized by the interval signed multiplicities $(\\delta^\\xi_L(I))_{I \\in \\mathbb{I}}$. Signed interval multiplicities are given by the Möbius inervsion of the interval ranks:\n",
+    "So, given a compression system $\\xi$, the interval replacement of the representation $L$ is characterized by the interval signed multiplicities $(\\delta^\\xi_L(I))_{I \\in \\mathbb{I}}$. Signed interval multiplicities are given by the Möbius inversion of the interval ranks:\n",
     "$$\n",
     "\\delta^\\xi_L(I) := \\sum_{S \\subseteq \\text{Cov}(I)} \n",
     "(-1)^{|S|} \\ \\text{rank}_{\\bigvee S}^{\\xi} L\n",
@@ -758,6 +758,34 @@
     "        display_interval(rep, itv)\n",
     "        print(f\"Interval signed multiplicity: {rep.int_replacement(itv)}\")\n",
     "        print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[1]**: Asashiba, H., Gauthier, E., & Liu, E. *Interval Replacements of Persistence Modules*. arXiv preprint [arXiv:2403.08308](https://arxiv.org/abs/2403.08308) (2024)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[2]**: Asashiba, H., Escolar, E. G., Nakashima, K., & Yoshiwaki, M. *On Approximation of 2D Persistence Modules by Interval-decomposables*. Journal of Computational Algebra, Volumes 6–7, 2023, 100007, ISSN 2772-8277, [https://doi.org/10.1016/j.jaca.2023.100007](https://doi.org/10.1016/j.jaca.2023.100007)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[3]**: Kim, W., & Mémoli, F. Generalized persistence diagrams for persistence modules over posets. J Appl. and Comput. Topology 5, 533–581 (2021). [https://doi.org/10.1007/s41468-021-00075-1](https://doi.org/10.1007/s41468-021-00075-1)."
    ]
   }
  ],
