--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,7 +11,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial notebook, we focus on a specific example of representation (also called persistence module) to illustrate how to compute its interval replacement using the provided code in the **utils.py** file. "
+    "In this tutorial notebook, we focus on a specific example of representation (also called persistence module) to illustrate how to compute its interval replacement using the provided code in the **utils.py** file. Some visualization features from **display.py** are available in 1D or 2D settings. Note that all the computations should be valid for any d-dimensional grid with $d \\ge 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial you will see how to:\n",
+    "- **define a representation** object ;\n",
+    "- **define intervals** of this representation ;\n",
+    "- **compute interval ranks and interval signed multiplicities**, which yield the interval replacement of the representation."
    ]
   },
   {
@@ -106,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note: in what follows we will consider $\\mathbb{k} = \\mathbb{R}$. You can modify the code if you want to compute path evaluations, interval ranks, and interval replacements in finite fields for example."
+    "Note: in what follows we will consider $\\mathbb{k} = \\mathbb{R}$. If necessary, you can modify the code to compute path evaluations, interval ranks, and interval replacements in finite fields for example."
    ]
   },
   {
@@ -123,7 +133,7 @@
    "outputs": [],
    "source": [
     "dimensions = [3, 3]  # 2D grid 3x3\n",
-    "rep = Representation(dimensions)"
+    "L = Representation(dimensions)"
    ]
   },
   {
@@ -155,14 +165,14 @@
     }
    ],
    "source": [
-    "display_rep(rep)"
+    "display_rep(L)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At the moment, the representation is a 3x3 grid with no vector space. We can add them manually."
+    "At the moment, the representation is a 3x3 grid with no vector space. We can add vector spaces manually."
    ]
   },
   {
@@ -172,15 +182,15 @@
    "outputs": [],
    "source": [
     "# manually add vector spaces\n",
-    "rep.create_vecs((0, 0), 0) # (position, vector space's dimension)\n",
-    "rep.create_vecs((0, 1), 1)\n",
-    "rep.create_vecs((0, 2), 1)\n",
-    "rep.create_vecs((1, 0), 2)\n",
-    "rep.create_vecs((1, 1), 2)\n",
-    "rep.create_vecs((1, 2), 2)\n",
-    "rep.create_vecs((2, 0), 2)\n",
-    "rep.create_vecs((2, 1), 2)\n",
-    "rep.create_vecs((2, 2), 2)"
+    "L.create_vecs((0, 0), 0) # (position, vector space's dimension)\n",
+    "L.create_vecs((0, 1), 1)\n",
+    "L.create_vecs((0, 2), 1)\n",
+    "L.create_vecs((1, 0), 2)\n",
+    "L.create_vecs((1, 1), 2)\n",
+    "L.create_vecs((1, 2), 2)\n",
+    "L.create_vecs((2, 0), 2)\n",
+    "L.create_vecs((2, 1), 2)\n",
+    "L.create_vecs((2, 2), 2)"
    ]
   },
   {
@@ -205,7 +215,7 @@
     }
    ],
    "source": [
-    "display_rep(rep)"
+    "display_rep(L)"
    ]
   },
   {
@@ -222,20 +232,20 @@
    "outputs": [],
    "source": [
     "# manually add linear maps u: x -> y\n",
-    "rep.create_matrix((0, 0), (1, 0), None)  # (x, y, matrix)\n",
-    "rep.create_matrix((0, 0), (0, 1), None) # for matrices equal to 0 you can directly write None\n",
-    "rep.create_matrix((0, 1), (0, 2), np.array([[0]])) # you can also explicitely write a matrix with zeros everywhere\n",
-    "rep.create_matrix((0, 1), (1, 1), np.array([[0], [1]]))\n",
-    "rep.create_matrix((0, 2), (1, 2), np.array([[0], [1]]))\n",
+    "L.create_matrix((0, 0), (1, 0), None)  # (x, y, matrix)\n",
+    "L.create_matrix((0, 0), (0, 1), None) # for matrices equal to 0 you can directly write None\n",
+    "L.create_matrix((0, 1), (0, 2), np.array([[0]])) # you can also explicitely write a matrix with zeros everywhere\n",
+    "L.create_matrix((0, 1), (1, 1), np.array([[0], [1]]))\n",
+    "L.create_matrix((0, 2), (1, 2), np.array([[0], [1]]))\n",
     "\n",
-    "rep.create_matrix((1, 0), (2, 0), np.array([[0, 0], [0, 0]])) \n",
-    "rep.create_matrix((1, 0), (1, 1), np.array([[0, 0], [0, 0]])) \n",
-    "rep.create_matrix((1, 1), (1, 2), np.array([[1, 0], [0, 0]]))\n",
-    "rep.create_matrix((1, 1), (2, 1), np.array([[1, 0], [0, 1]]))\n",
-    "rep.create_matrix((1, 2), (2, 2), np.array([[1, 0], [0, 1]]))\n",
+    "L.create_matrix((1, 0), (2, 0), np.array([[0, 0], [0, 0]])) \n",
+    "L.create_matrix((1, 0), (1, 1), np.array([[0, 0], [0, 0]])) \n",
+    "L.create_matrix((1, 1), (1, 2), np.array([[1, 0], [0, 0]]))\n",
+    "L.create_matrix((1, 1), (2, 1), np.array([[1, 0], [0, 1]]))\n",
+    "L.create_matrix((1, 2), (2, 2), np.array([[1, 0], [0, 1]]))\n",
     "\n",
-    "rep.create_matrix((2, 0), (2, 1), np.array([[1, 0], [0, 1]]))\n",
-    "rep.create_matrix((2, 1), (2, 2), np.array([[1, 0], [0, 0]]))"
+    "L.create_matrix((2, 0), (2, 1), np.array([[1, 0], [0, 1]]))\n",
+    "L.create_matrix((2, 1), (2, 2), np.array([[1, 0], [0, 0]]))"
    ]
   },
   {
@@ -260,55 +270,19 @@
     }
    ],
    "source": [
-    "display_rep(rep)"
+    "display_rep(L)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If needed, we can have access to all the elements of the *representation* object as follows:"
+    "Once we have specified all the matrices, we can now evaluate $L(\\rho)$, given a path $\\rho: x \\rightarrow y$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nodes: [(0, 0), (0, 1), (0, 2), (1, 0), (1, 1), (1, 2), (2, 0), (2, 1), (2, 2)]\n",
-      "Edges: [((0, 0), (0, 0)), ((0, 0), (0, 1)), ((0, 0), (0, 2)), ((0, 0), (1, 0)), ((0, 0), (1, 1)), ((0, 0), (1, 2)), ((0, 0), (2, 0)), ((0, 0), (2, 1)), ((0, 0), (2, 2)), ((0, 1), (0, 1)), ((0, 1), (0, 2)), ((0, 1), (1, 1)), ((0, 1), (1, 2)), ((0, 1), (2, 1)), ((0, 1), (2, 2)), ((0, 2), (0, 2)), ((0, 2), (1, 2)), ((0, 2), (2, 2)), ((1, 0), (1, 0)), ((1, 0), (1, 1)), ((1, 0), (1, 2)), ((1, 0), (2, 0)), ((1, 0), (2, 1)), ((1, 0), (2, 2)), ((1, 1), (1, 1)), ((1, 1), (1, 2)), ((1, 1), (2, 1)), ((1, 1), (2, 2)), ((1, 2), (1, 2)), ((1, 2), (2, 2)), ((2, 0), (2, 0)), ((2, 0), (2, 1)), ((2, 0), (2, 2)), ((2, 1), (2, 1)), ((2, 1), (2, 2)), ((2, 2), (2, 2))]\n",
-      "Vector spaces: {(0, 0): 0, (0, 1): 1, (0, 2): 1, (1, 0): 2, (1, 1): 2, (1, 2): 2, (2, 0): 2, (2, 1): 2, (2, 2): 2}\n",
-      "Matrices: {((0, 0), (1, 0)): None, ((0, 0), (0, 1)): None, ((0, 1), (0, 2)): array([[0]]), ((0, 1), (1, 1)): array([[0],\n",
-      "       [1]]), ((0, 2), (1, 2)): array([[0],\n",
-      "       [1]]), ((1, 0), (2, 0)): array([[0, 0],\n",
-      "       [0, 0]]), ((1, 0), (1, 1)): array([[0, 0],\n",
-      "       [0, 0]]), ((1, 1), (1, 2)): array([[1, 0],\n",
-      "       [0, 0]]), ((1, 1), (2, 1)): array([[1, 0],\n",
-      "       [0, 1]]), ((1, 2), (2, 2)): array([[1, 0],\n",
-      "       [0, 1]]), ((2, 0), (2, 1)): array([[1, 0],\n",
-      "       [0, 1]]), ((2, 1), (2, 2)): array([[1, 0],\n",
-      "       [0, 0]])}\n"
-     ]
-    }
-   ],
-   "source": [
-    "rep.elements()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Once we have specified all the matrices, we can now evaluate $\\text{rep}(\\rho)$, given a path $\\rho: x \\rightarrow y$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -318,13 +292,13 @@
        "       [1.]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rep.evaluation((0,1), (2,1)) # (x, y)"
+    "L.evaluation((0,1), (2,1)) # (x, y)"
    ]
   },
   {
@@ -350,12 +324,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "itv1 = Interval([(2,0),(1,1),(0,2)], [(2,2)]) # (sources, sinks)\n",
-    "# interval with 3 sources: (2,0),(1,1),(0,2) and 1 sink: (2,2)"
+    "# interval with 3 sources: (2,0), (1,1), (0,2) and 1 sink: (2,2)"
    ]
   },
   {
@@ -367,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +361,7 @@
     }
    ],
    "source": [
-    "display_interval(rep, itv1)"
+    "display_interval(L, itv1)"
    ]
   },
   {
@@ -399,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -408,25 +382,25 @@
        "[(1, 2), (2, 1), (1, 1), (2, 0), (0, 2), (2, 2)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rep.int_hull(itv1)"
+    "L.int_hull(itv1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conversely, given a list of points forming a convex and connected set, we can instanciate an Interval object with **get_src_snk**:"
+    "Conversely, given a list of points forming a convex and connected set, we can create an Interval object with **get_src_snk**:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -447,9 +421,9 @@
    ],
    "source": [
     "points = [(1, 2), (2, 1), (1, 1), (2, 0), (0, 2), (2, 2)]\n",
-    "src, snk =  rep.get_src_snk(points)\n",
+    "src, snk =  L.get_src_snk(points)\n",
     "itv2 = Interval(src,snk)\n",
-    "display_interval(rep, itv2)"
+    "display_interval(L, itv2)"
    ]
   },
   {
@@ -461,16 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "intervals = rep.list_int(conv=False)"
+    "intervals = L.list_int(conv=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -520,16 +494,16 @@
     "\\begin{equation*}\n",
     "    \\text{rank}_I^{\\xi} L =\n",
     "\\text{rank} \\left[\\begin{array}{ccc}\n",
-    "\\bm{M} & \\mathbf{0}\\\\\n",
+    "\\mathbf{M} & \\mathbf{0}\\\\\n",
     "\\left[\\begin{array}{ccc}\n",
-    "M_{b_1, a_1} & \\mathbf{0}\\\\\n",
+    "L_{b_1, a_1} & \\mathbf{0}\\\\\n",
     "\\mathbf{0} & \\mathbf{0}\n",
-    "\\end{array}\\right] & \\bm{N}\n",
-    "\\end{array}\\right] - \\text{rank} \\bm{M} - \\text{rank} \\bm{N}\n",
+    "\\end{array}\\right] & \\mathbf{N}\n",
+    "\\end{array}\\right] - \\text{rank} \\mathbf{M} - \\text{rank} \\mathbf{N}\n",
     "\\end{equation*}\n",
     "\n",
     "where $I$ is any interval, and if $I$ has only one sink (resp. only one source), then\n",
-    "$\\bm{N}$ (resp. $\\bm{M}$) is an empty matrix. Otherwise $\\bm{M}$ has the form in **[1, Theorem 5.7]** and $\\bf{N}$ has the form in **[1, Theorem 5.16]**."
+    "$\\mathbf{N}$ (resp. $\\mathbf{M}$) is an empty matrix. Otherwise $\\mathbf{M}$ has the form in **[1, Theorem 5.7]** and $\\mathbf{N}$ has the form in **[1, Theorem 5.16]**."
    ]
   },
   {
@@ -541,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -558,12 +532,12 @@
     }
    ],
    "source": [
-    "print(rep.matrix_M(itv1))"
+    "print(L.matrix_M(itv1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +550,7 @@
    ],
    "source": [
     "# since itv1 has only one sink, N should be empty\n",
-    "print(rep.matrix_N(itv1))"
+    "print(L.matrix_N(itv1))"
    ]
   },
   {
@@ -588,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -597,13 +571,13 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rep.int_rank(itv1)"
+    "L.int_rank(itv1)"
    ]
   },
   {
@@ -624,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a representation $L$, its interval replacement is defined as follows:\n",
+    "Given a representation $L$ and a compression system $\\xi$, its interval replacement $\\delta^\\xi(L)$ is defined as follows:\n",
     "\\begin{aligned}\n",
     "\\delta^\\xi(L)_+ &:=\n",
     "\\bigoplus\\limits_{\\substack{I\\in\\mathbb{I}\\\\\\delta^\\xi_L(I)>0}} {V_I}^{\\delta^\\xi_L(I)},\n",
@@ -664,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -673,13 +647,13 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rep.int_replacement(itv1)\n",
+    "L.int_replacement(itv1)\n",
     "# The interval itv1 has a signed multiplicity equal to zero"
    ]
   },
@@ -692,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -752,11 +726,11 @@
    ],
    "source": [
     "for itv in intervals:\n",
-    "    repl = rep.int_replacement(itv)\n",
+    "    repl = L.int_replacement(itv)\n",
     "    if repl != 0 :\n",
     "        print(f\"Interval with source(s) {itv.src} and sink(s) {itv.snk}\")\n",
-    "        display_interval(rep, itv)\n",
-    "        print(f\"Interval signed multiplicity: {rep.int_replacement(itv)}\")\n",
+    "        display_interval(L, itv)\n",
+    "        print(f\"Interval signed multiplicity: {L.int_replacement(itv)}\")\n",
     "        print()"
    ]
   },
