--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial notebook, we focus on a specific example of representation (also called persistence module) to illustrate how to compute its interval replacement using the provided code in the **utils.py** file. Some visualization features from **display.py** are available in 1D or 2D settings. Note that all the computations should be valid for any d-dimensional grid with $d \\ge 1$."
+    "In this tutorial notebook, we focus on a specific example of (quiver) representation, also called persistence module, to illustrate how to compute its interval replacement using the provided code in the **utils.py** file. Some visualization features from **display.py** are available in 1D or 2D settings. Note that all the computations should be valid for any d-dimensional grid with $d \\ge 1$."
    ]
   },
   {
