added italic font for references

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -759,7 +759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**[3]**: Kim, W., & Mémoli, F. Generalized persistence diagrams for persistence modules over posets. J Appl. and Comput. Topology 5, 533–581 (2021). [https://doi.org/10.1007/s41468-021-00075-1](https://doi.org/10.1007/s41468-021-00075-1)."
+    "**[3]**: Kim, W., & Mémoli, F. *Generalized persistence diagrams for persistence modules over posets*. J Appl. and Comput. Topology 5, 533–581 (2021). [https://doi.org/10.1007/s41468-021-00075-1](https://doi.org/10.1007/s41468-021-00075-1)."
    ]
   }
  ],
