added number of intervals - added refs

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -443,8 +443,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By **[4, Theorem 31]**, we know that the number of intervals should be equal to $\\sum\\limits_{w=1}^3 \\sum\\limits_{w=1}^3 \\frac{(3-w+1)(3-h+1)}{h+w-1} \\binom{h+w-1}{h-1}\\binom{h+w-1}{w-1}$."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "83.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "m = 3\n",
+    "n = 3\n",
+    "S = 0\n",
+    "for w in range(1,m+1):\n",
+    "    for h in range(1,n+1):\n",
+    "        S += (m-w+1)*(n-h+1)/(h+w-1)*math.comb(h+w-1,h-1)*math.comb(h+w-1,w-1)\n",
+    "print(S)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -457,6 +488,13 @@
    ],
    "source": [
     "print(len(intervals))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number of intervals is indeed equal to 83 here."
    ]
   },
   {
@@ -515,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +609,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +685,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -760,6 +798,13 @@
    "metadata": {},
    "source": [
     "**[3]**: Kim, W., & Mémoli, F. *Generalized persistence diagrams for persistence modules over posets*. J Appl. and Comput. Topology 5, 533–581 (2021). [https://doi.org/10.1007/s41468-021-00075-1](https://doi.org/10.1007/s41468-021-00075-1)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**[4]**: Asashiba, H., Buchet, M., Escolar, E. G., Nakashima, K., & Yoshiwaki, M. *On interval decomposability of 2D persistence modules*, Computational Geometry, Volumes 105–106, 2022, 101879, ISSN 0925-7721, [https://doi.org/10.1016/j.comgeo.2022.101879](https://doi.org/10.1016/j.comgeo.2022.101879)."
    ]
   }
  ],
